# jump-thingy

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  dir_49e56c817e5e54854c35e136979f97ca.html  files.html  globals.html  globals_8c.html  globals_8c_source.html  globals_8h.html  globals_8h_source.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8c.html  main_8c_source.html  mainpage_8dox.html  platforms_8c.html  platforms_8c_source.html  platforms_8h.html  platforms_8h_source.html  player_8c.html  player_8c_source.html  player_8h.html  player_8h_source.html  run.py  run.sh  utils_8h.html  utils_8h_source.html
.github/workflows/: gh-pages.yml
docs/: Doxyfile  mainpage.dox
includes/: game.h  globals.h  object.h  platforms.h  player.h  scene.h  utils.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  files_2.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: game.cpp  globals.c  main.c  main.cpp  platforms.c  platforms.cpp  player.c  player.cpp  scene.cpp
